2002-03-17  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am: Add new Makefiles
	* configure.in: ditto
	* capplets/Makefile.am: Add keybindings dialog

	* capplets/keybindings/.cvsignore: shut up CVS

	* capplets/keybindings/Makefile.am:
	* capplets/keybindings/eggcellrendererkeys.c:
	* capplets/keybindings/eggcellrendererkeys.h:
	* capplets/keybindings/gnome-keybinding-properties.c: 
	* capplets/keybindings/gnome-keybinding-properties.glade: 
	* capplets/keybindings/keybinding.desktop.in:
	New properties dialog.  Seems to work

	* schemas/.cvsignore: shut up CVS

	* schemas/Makefile.am:
	* schemas/apps_gnome_keybinding_properties.schemas: New schemas
	file for configuring the keybinding schemas.
	* schemas/background.schemas: Remove unneeded schemas files
	* schemas/peripherals.schemas:
	* schemas/screensaver.schemas:

2002-03-11  Richard Hestilow <hestilow@ximian.com>

	* Committed patches by Lauris Kaplinski for bugs 73571, 73587,
	and 71613.
	
2002-03-11  jacob berkman  <jacob@ximian.com>

	* configure.in (AC_OUTPUT): 
	* Makefile.am (SUBDIRS): add idl/

2002-03-10  Havoc Pennington  <hp@pobox.com>

	* configure.in (ORBIT_IDL): define ORBIT_IDL and IDL flags so
	gnome-settings-daemon will build

2002-03-08  Richard Hestilow <hestilow@ximian.com>

	* RELEASE: 1.99.4

2002-03-05  jacob berkman  <jacob@ximian.com>

	* configure.in (EXTRA_CFLAGS): remove -I intl

2002-03-05  Richard Hestilow <hestilow@ximian.com>

	* configure.in: AC_SUBST GNOMECC_CFLAGS and GNOMECC_LIBS.

2002-03-05  jacob berkman  <jacob@ximian.com>

	* configure.in: using $GETTEXT_PACKAGE-2 is redundant

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* root-manager/root-manager-helper.c: s/PACKAGE/GETTEXT_PACKAGE/g
	* configure.in: Add missing AC_DEFINE_UNQUOTED so that GETTEXT_PACKAGE
	ends up in config.h. Also s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* capplets/default-applications/gnome-default-applications-properties.glade: