@@ -1,3 +1,8 @@
+Sun Mar 17 16:30:48 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* capplets/keybindings/gnome-keybinding-properties.c
+	(create_dialog): fix typo.
+
 2002-03-17  Jonathan Blandford  <jrb@redhat.com>
 
 	* Makefile.am: Add new Makefiles
